[package]
name = "wodscraper"
version = "0.1.0"
edition = "2021"
authors = ["Luis D'Lima <delimce@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
itertools = "0.10.3"