[package]
name = "wodscraper"
version = "0.2.0"
edition = "2021"
authors = ["Luis D'Lima <delimce@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Link-time optimization.
codegen-units = 1  # Reduce codegen units to reduce binary size.


[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
itertools = "0.10.3"
regex = "1.6.0"
diesel = { version = "2.0.0-rc.0", features = ["mysql","r2d2"]  }
dotenvy = "0.15"
chrono = "0.4"